<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Todo Item"
        android:textSize="50dp"
        android:id="@+id/todoTitle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/todoTitle"
        android:text="Delete"
        android:id="@+id/btnDeleteTodo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/todoSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save" />

</RelativeLayout>