...
        android:layout_marginHorizontal="10dp"
        android:text="Practice Flashcards"
        app:layout_constraintTop_toBottomOf="@+id/btnShortcutNotes"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/btnShortcutTodo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:text="View ToDo items"
        app:layout_constraintTop_toBottomOf="@+id/btnShortcutFlashcards"
        tools:layout_editor_absoluteX="16dp"/>
...
